WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312287
Unregister service worker registrations with missing main script
https://bugs.webkit.org/show_bug.cgi?id=312287
Summary
Unregister service worker registrations with missing main script
youenn fablet
Reported
2026-04-14 10:34:55 PDT
Unregister service worker registrations with missing scripts
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-14 10:35:07 PDT
<
rdar://problem/174755909
>
youenn fablet
Comment 2
2026-04-14 10:52:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62748
EWS
Comment 3
2026-04-15 10:52:02 PDT
Committed
311301@main
(dc17abd7018a): <
https://commits.webkit.org/311301@main
> Reviewed commits have been landed. Closing PR #62748 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug