Cherry-pick dc17abd7018a. rdar://175522651

Unregister service worker registrations with missing main script
    rdar://174755909
    https://bugs.webkit.org/show_bug.cgi?id=312287

    Reviewed by Chris Dumez.

    As seen in logs, service worker database may have registrations with missing service worker scripts.
    In that case, it is best to clear the registration as we cannot run properly the service worker.
    The web page is then expected to reregister the service worker as needed.

    We implement this by having a load script callback returning true or false.
    In case of failure, we schedule an unregister job.

    We add some logging to help further diagnose.

    Test: Tools/TestWebKitAPI/Tests/WebKit/WKWebView/ServiceWorkerBasic.mm
    Canonical link: https://commits.webkit.org/311301@main

Canonical link: https://commits.webkit.org/305413.893@safari-7624.4-branch