Source/WebCore/workers/service/server/SWServer.cpp
@@ -236,11 +236,11 @@ void SWServer::addRegistrationFromStore(ServiceWorkerContextData&& data, Complet
     });
 }
 
-void SWServer::loadWorkerScripts(const SWServerWorker& worker, CompletionHandler<void()>&& callback)
+void SWServer::loadWorkerScripts(const SWServerWorker& worker, CompletionHandler<void(bool)>&& callback)
 {
     RefPtr store = m_registrationStore;
     if (!store) {
-        callback();
+        callback(false);
         return;
     }
 
@@ -248,15 +248,29 @@ void SWServer::loadWorkerScripts(const SWServerWorker& worker, CompletionHandler
         [weakThis = WeakPtr { *this }, workerIdentifier = worker.identifier(), callback = WTF::move(callback)](auto&& result) mutable {
             RefPtr protectedThis = weakThis;
             if (!protectedThis)
-                return callback();
+                return callback(false);
 
-            if (RefPtr worker = protectedThis->workerByID(workerIdentifier)) {
-                if (result)
-                    worker->setWorkerScripts(WTF::move(result->mainScript), WTF::move(result->importedScripts));
-                else
-                    worker->didFailToLoadWorkerScripts();
+            bool success = !!result;
+            auto scope = makeScopeExit([&] {
+                callback(success);
+            });
+
+            RefPtr worker = protectedThis->workerByID(workerIdentifier);
+            if (!worker)
+                return;
+
+            if (!success) {
+                if (RefPtr registration = worker->registration()) {
+                    RELEASE_LOG_ERROR(ServiceWorker, "Unregistering registration %" PRIu64 " due to worker script retrieval failure", registration->identifier().toUInt64());
+                    auto contextIdentifier = ServiceWorkerIdentifier::generate();
+                    ServiceWorkerJobDataIdentifier jobIdentifier { Process::identifier(), ServiceWorkerJobIdentifier::generate() };
+                    protectedThis->scheduleUnregisterJob(jobIdentifier, *registration, contextIdentifier, registration->scriptURL());
+                }
+                worker->didFailToLoadWorkerScripts();
+                return;
             }
-            callback();
+
+            worker->setWorkerScripts(WTF::move(result->mainScript), WTF::move(result->importedScripts));
         });
 }
 
@@ -1092,9 +1106,9 @@ void SWServer::runServiceWorkerIfNecessary(SWServerWorker& worker, RunServiceWor
     }
 
     if (worker.needsScriptLoading()) {
-        loadWorkerScripts(worker, [weakThis = WeakPtr { *this }, identifier = worker.identifier(), callback = WTF::move(callback)]() mutable {
+        loadWorkerScripts(worker, [weakThis = WeakPtr { *this }, identifier = worker.identifier(), callback = WTF::move(callback)](bool success) mutable {
             RefPtr protectedThis = weakThis;
-            if (!protectedThis)
+            if (!protectedThis || !success)
                 return callback(nullptr);
             protectedThis->runServiceWorkerIfNecessary(identifier, WTF::move(callback));
         });
